# verg

./: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  SECURITY.md  build.rs  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: resources.md
e2e/: .gitignore  Dockerfile  run.sh
e2e/fixture/: hosts.toml
e2e/fixture/groups/: test.toml
e2e/fixture/state/: base.toml
src/: agent.rs  agent_checksums.rs  bundle.rs  changelog.rs  engine.rs  error.rs  lib.rs  output.rs  schema.rs
src/commands/: apply.rs  check.rs  diff.rs  init.rs  mod.rs
src/config/: mod.rs
src/inventory/: groups.rs  mod.rs  selector.rs  static_hosts.rs
src/resources/: apt_repo.rs  atomic.rs  cmd.rs  cron.rs  dag.rs  directory.rs  docker_compose.rs  download.rs  file.rs  mod.rs  pkg.rs  service.rs  sysctl.rs  tempdir.rs  user.rs  when.rs
src/state/: mod.rs  vars.rs
src/transport/: mod.rs  ssh.rs
tests/: integration.rs
