[package]
name = "verg"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
description = "Desired-state infrastructure convergence engine"
license = "MIT"
repository = "https://github.com/rvben/verg"
categories = ["command-line-utilities"]
keywords = ["infrastructure", "config-management", "devops", "ansible", "iac"]
readme = "README.md"

[[bin]]
name = "verg"
path = "src/bin/verg.rs"

[[bin]]
name = "verg-agent"
path = "src/bin/verg_agent.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util", "sync"] }
thiserror = "2"
owo-colors = "4"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
