[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "verg"
dynamic = ["version"]
description = "Desired-state infrastructure convergence engine"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Ruben J. Jongejan", email = "ruben.jongejan@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: System :: Systems Administration",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/rvben/verg"
Repository = "https://github.com/rvben/verg.git"

[tool.maturin]
bindings = "bin"
manifest-path = "Cargo.toml"
python-packages = ["verg_py"]
strip = true
